# netology_new

Module 1/Занятие 10 Указатели. Динамическая память/: 1 enter_array.cpp  2 create_array.cpp  3 dynamic_multiplication_sheet.cpp
Module 1/Занятие 11 Строки/: 1 greeting.cpp  2 guess_word.cpp
Module 1/Занятие 12 Файлы/: 1 file_input.cpp  2 array_input.cpp  3 user_array_output.cpp  4 two_dim_array_input.cpp
Module 1/Занятие 3 Ветвление/: 1. logic_sheet.cpp  2. range_integers.cpp  3. goroscope.cpp  4. compare_int.cpp
Module 1/Занятие 4 Циклы/: multipl_sheet.cpp  summ_of_digits.cpp  summator.cpp
Module 1/Занятие 5 Массивы/: 1. mass_to_screen.cpp  2. max_and_min.cpp  3. mass_2d.cpp  4. reverse_bubble_sort.cpp
Module 1/Занятие 6 Функции/: 1. aryphm_func.cpp  2. del_doubled_code.cpp  3. fibonacci.cpp  4. fibbonacci_faster.cpp
Module 1/Занятие 7 Модель памяти/: 1. variable_adresses.cpp  2. swap.cpp  3. swap_without_temp.cpp
Module 1/Занятие 8 Область видимости и типы памяти/: 1. counter.cpp  2. different_functions.cpp
Module 1/Занятие 9 Указатели. Массивы и параметры функций/: 1. print_mass.cpp  2. swap with ptr.cpp  3. reverse_mass.cpp
Module 1/Курсовая работа/: main.cpp
Module 3/Final work/vehicles/: AirVehicle.cpp  AirVehicle.h  AllTerrainBoots.h  Broom.cpp  Broom.h  CMakeLists.txt  Camel.h  Centaur.h  Eagle.cpp  Eagle.h  FastCamel.h  GroundVehicle.cpp  GroundVehicle.h  MagicCarpet.cpp  MagicCarpet.h  Vehicle.cpp  Vehicle.h
Module 3/Занятие 10. Библиотеки/Задание 5/: CMakeLists.txt  Parallelogram.h  Rhomb.h  Shape.h  Square.h
(+92 files in other folders)
